# ConsentOS

./: .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml
backend/: pyproject.toml
backend/app/: __init__.py  config.py  db.py  deps.py  main.py
backend/app/api/: accounts.py  activity.py  approvals.py  auth.py  health.py  permissions.py  security.py  token_vault.py
backend/app/auth/: auth0_client.py  ciba.py  verify.py
backend/app/middleware/: request_context.py
backend/app/migrations/: README.md
backend/app/models/: __init__.py  activity_log.py  connected_account.py  permission.py  user.py
backend/app/repositories/: activity_log.py  connected_accounts.py  permissions.py  users.py
backend/app/schemas/: accounts.py  activity.py  approvals.py  auth.py  diagnostics.py  permissions.py  security.py  token_vault.py
backend/app/services/: activity_service.py  approval_service.py  auth0_diagnostics_service.py  connected_accounts_service.py  permissions_service.py  provider_registry.py  security_service.py  token_vault_service.py  user_service.py
backend/tests/: conftest.py  test_api.py  test_approval_window.py
mcp/: pyproject.toml
mcp/consentos_mcp/: __init__.py
mcp/consentos_mcp/orchestrator/: __init__.py  agent.py  planner.py  runtime.py  tool_catalog.py
mcp/consentos_mcp/servers/: __init__.py  calendar_server.py  github_server.py  gmail_server.py  slack_server.py  stripe_server.py
mcp/consentos_mcp/shared/: __init__.py  (+5 more)
mcp/tests/: test_backend_client.py  test_live_provider_adapters.py  test_planner.py  test_tool_utils.py
(+50 files in other folders)
