[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "consentos-backend"
version = "0.1.0"
description = "ConsentOS FastAPI backend"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "httpx>=0.27,<0.28",
  "psycopg[binary]>=3.2,<4.0",
  "pydantic-settings>=2.6,<3.0",
  "pyjwt[crypto]>=2.10,<3.0",
  "sqlalchemy>=2.0,<3.0",
  "uvicorn>=0.32,<0.33",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9.0",
]

[tool.setuptools]
packages = [
  "app",
  "app.api",
  "app.auth",
  "app.middleware",
  "app.models",
  "app.repositories",
  "app.schemas",
  "app.services",
  "app.services.providers",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
