[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "consentos-mcp"
version = "0.1.0"
description = "ConsentOS MCP servers and orchestrator"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "httpx>=0.27,<0.28",
  "mcp[cli]>=1.0,<2.0",
  "pydantic-settings>=2.6,<3.0",
  "uvicorn>=0.32,<0.33",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9.0",
]

[tool.setuptools]
packages = [
  "consentos_mcp",
  "consentos_mcp.shared",
  "consentos_mcp.servers",
  "consentos_mcp.orchestrator",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
